# lerobot_policy_openvla

./: README.md  pyproject.toml
src/lerobot_policy_openvla/: __init__.py  configuration_openvla.py  modeling_openvla.py  processor_openvla.py
src/lerobot_policy_openvla/prismatic_shim/training/: train_utils.py
src/lerobot_policy_openvla/prismatic_shim/vla/: constants.py
tests/: test_forward.py  test_processor.py  test_real_model.py
